# geocoder3

./: .codeclimate.yml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  codecov.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: labels.yml  release-drafter.yml
docs/: requirements.txt
geocoder/: __init__.py  api.py  arcgis.py  arcgis_reverse.py  baidu.py  baidu_reverse.py  base.py  bing.py  bing_batch.py  bing_batch_forward.py  bing_batch_reverse.py  bing_reverse.py  canadapost.py  cli.py  distance.py  freegeoip.py  gaode.py  gaode_reverse.py  geocodefarm.py  geocodefarm_reverse.py  geocodexyz.py  geolytica.py  geonames.py  geonames_children.py  geonames_details.py  geonames_hierarchy.py  geonames_timezone.py  gisgraphy.py  gisgraphy_reverse.py  google.py  google_elevation.py  google_places.py  google_reverse.py  google_timezone.py  here.py  here_reverse.py  ipfinder.py  ipinfo.py  keys.py  komoot.py  (+29 more)
tests/: test_api.py  test_arcgis.py  (+39 more)
tests.old/: test_arcgis.py  test_baidu.py  test_bing.py  test_canadapost.py  test_freegeoip.py  test_gaode.py  test_geocodefarm.py  test_geocodexyz.py  test_geolytica.py  test_geonames.py  test_gisgraphy.py  test_google.py  test_here.py  test_ipinfo.py  test_komoot.py  test_locationiq.py  test_locations.py  test_mapbox.py  test_mapquest.py  test_mapzen.py  test_maxmind.py  test_opencage.py  test_ottawa.py  test_session.py  test_tamu.py  test_tomtom.py  test_uscensus.py  test_w3w.py  test_yandex.py
(+200 files in other folders)
