[flake8]
# https://www.flake8rules.com/
# I201: Missing newline between import groups.
# E203: Whitespace before ':'
# W503: Line break occurred before a binary operator
ignore=I201,E203,W503
max-line-length=88
statistics=True
exclude=.nox,.git,docs

[metadata]
description-file = README.md

[bdist_wheel]
universal = 1
