[flake8]
# https://www.flake8rules.com/
# I201: Missing newline between import groups.
# E203: Whitespace before ':'
# W503: Line break occurred before a binary operator
ignore=I201,E203,W503
max-line-length=88
statistics=True
exclude=.nox,.git,docs

[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests
addopts =
    -vvv
    --cov-report term-missing
    --cov=tests
    --cov=geocoder
    --cov-config=setup.cfg

# Coverage configuration start
[coverage:run]
branch = False

[coverage:report]
sort = Cover
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    def __str__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True
show_missing = True

# Coverage configuration end
